2019-11-28  Aakash Jain  <aakash_jain@apple.com>

        [ews] Enable Windows queue on new EWS
        https://bugs.webkit.org/show_bug.cgi?id=204243

        Reviewed by Jonathan Bedard.

        * BuildSlaveSupport/ews-app/ews/views/statusbubble.py: Enabled windows queue bubble on new EWS.
        * BuildSlaveSupport/ews-build/config.json: Enabled the scheduler for windows queue. Removed the disabled Try_Userpass scheduler.
        * BuildSlaveSupport/build.webkit.org-config/public_html/dashboard/Scripts/BubbleQueueServer.js:
        (BubbleQueueServer): Removed windows ews queue from bot-watcher's dashboard.
        * QueueStatusServer/config/queues.py: Removed windows queue from old EWS.

2019-11-28  Philippe Normand  <pnormand@igalia.com>

        [GStreamer] Move GL video sink to its own GstBin sub-class
        https://bugs.webkit.org/show_bug.cgi?id=204624

        Reviewed by Xabier Rodriguez-Calvar.

        * Scripts/webkitpy/style/checker.py: White-list the new GLVideoSinkGStreamer GObject implementation.

2019-11-27  Zalan Bujtas  <zalan@apple.com>

        [LFC] Unreviewed test gardening.

        * LayoutReloaded/misc/LFC-passing-tests.txt: These tests were passing accidentally.

2019-11-26  Fujii Hironori  <Hironori.Fujii@sony.com>

        [AppleWin] run-webkit-tests is failing to find bin32/DumpRenderTree since r252834
        https://bugs.webkit.org/show_bug.cgi?id=204571

        Reviewed by Ross Kirsling.

        * BuildSlaveSupport/build.webkit.org-config/steps.py:
        (RunWebKitTests.start): Replaced 'bin32' with 'bin64'.

2019-11-25  Kent Tamura  <tkent@chromium.org>

        Remove tkent@ from watchlist
        https://bugs.webkit.org/show_bug.cgi?id=204599

        Reviewed by Chris Dumez.

        * Scripts/webkitpy/common/config/watchlist: Remove tkent@

2019-11-25  Wenson Hsieh  <wenson_hsieh@apple.com>

        [macOS] Dragged images are only available as .tiff when dropping onto macCatalyst apps